small ux tweaks and icon assets

--- a/ios/BoAVantagePoint/Base.lproj/LaunchScreen.xib
+++ b/ios/BoAVantagePoint/Base.lproj/LaunchScreen.xib
@@ -22,8 +22,16 @@
                     <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <size key="shadowOffset" width="0.0" height="1"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="BoA Vantage Point" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Vantage Point" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
                     <rect key="frame" x="20" y="345" width="441" height="43"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="28"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                    <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <size key="shadowOffset" width="0.0" height="1"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Bradford on Avon" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="T9Y-wS-WbL">
+                    <rect key="frame" x="20" y="309" width="441" height="43"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="28"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
@@ -35,14 +43,17 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="boB-qj-xQ6" secondAttribute="trailing" id="014-1C-Qnm"/>
                 <constraint firstItem="boB-qj-xQ6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="0c1-oU-pVg"/>
+                <constraint firstItem="T9Y-wS-WbL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="19" id="7bn-Yk-AxH"/>
                 <constraint firstAttribute="bottom" secondItem="boB-qj-xQ6" secondAttribute="bottom" id="8jl-vg-D3e"/>
                 <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="8" id="SP8-2u-DF1"/>
                 <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
+                <constraint firstAttribute="trailing" secondItem="T9Y-wS-WbL" secondAttribute="trailing" constant="19" id="cXM-47-HHG"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
                 <constraint firstItem="boB-qj-xQ6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="t1f-aC-tg1"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="T9Y-wS-WbL" secondAttribute="bottom" constant="44" id="t2x-Gq-Gn0"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
